Comment add, edit and remove endpoints
